# joinx

./: .gitignore  .travis.yml  .ycm_extra_conf.py.in  CMakeLists.txt  PackageInfo.cmake  README.textile  common.yml  documentation.html  gmt.yml  install.html  install.textile  intro.html  intro.textile  site.yml
doc/: CMakeLists.txt  joinx-vcf-merge.pod  joinx.pod
integration-test/: CMakeLists.txt  JoinxTest.pm  create-contigs.t  expected-output.pl  intersect.t  joinxtest.py  sort.t  test_bed_merge.py  test_cmdline.py  test_create_contigs.py  test_find_homopolymers.py  test_intersect.py  test_ref_stats.py  test_snv_concordance.py  test_snv_concordance_by_quality.py  test_sort.py  test_vcf_annotate.py  test_vcf_annotate_homopolymers.py  test_vcf_compare_gt.py  test_vcf_filter.py  test_vcf_merge.py  test_vcf_merge_consensus.py  test_vcf_normalize_indels.py  test_vcf_remove_filtered_gt.py  test_vcf_report.py  test_vcf_site_filter.py  test_wig2bed.py  valgrind.py
integration-test/data/: a-regions.bed  a.bed  adjacent-insertions-a.bed  adjacent-insertions-b.bed  b.bed  expected-adjacent-insertions.bed  expected-concordance-ab.txt  expected-concordance-ba.txt  expected-concordance-by-qual.txt  expected-contigs.fa  expected-contigs.fa.remap  expected-exact-allele.bed  expected-exact-pos-both.bed  expected-exact-pos.bed  expected-merge-samples-c50-D.vcf  expected-merge-samples-c50.vcf  expected-merge-samples-c60.vcf  expected-miss-b.bed  expected-no-adjacent-insertions.bed  expected-noargs-both.bed  expected-refstats-basic.txt  expected-refstats-with-bases.txt  expected-sort.vcf  expected-union.bed  merge-2.vcf  merge-samples-1.vcf  merge-samples-2.vcf  merged.vcf  posonly.bed  refstats.bed  refstats.fa  small.fa  snva.bed  snvb.bed  unsorted0.bed  unsorted0.vcf  unsorted1.vcf  unsorted3.bed  variants-contig.bed  variants-contig.vcf
integration-test/data/bed-merge/: expected-shrinking-stop.bed  input.bed  out-d0.bed  out-d1.bed  out-d10.bed  shrinking-stop.bed
integration-test/data/find-homopolymers/: expected.bed  test.fa
integration-test/data/sort/: expected-sort.vcf  union-a.bed  union-b.bed  unsorted0.vcf  unsorted1.bed
integration-test/data/vcf-annotate/: annotation.vcf  expected.vcf  input.vcf
integration-test/data/vcf-annotate-homopolymers/: README.md  expected.vcf  homop.bed  homop.bed.slop  input.vcf
integration-test/data/vcf-compare-gt/: a.vcf  b.vcf  c.vcf  expected-b-b.txt  expected-f-u.txt  expected-u-b.txt
integration-test/data/vcf-filter/: expected-d10.vcf  expected-d2.vcf  expected-d6.vcf  input.vcf
integration-test/data/vcf-merge/: expected-merge-per-alt-list.vcf  expected-merge-samples-c50-D.vcf  expected-merge-samples-c50.vcf  expected-merge-samples-c60.vcf  merge-1.vcf  merge-2.vcf  merge-per-alt-list-1.vcf  merge-per-alt-list-2.vcf  merge-samples-1.vcf  merge-samples-2.vcf  merged.vcf
integration-test/data/vcf-normalize-indels/: expected.vcf  input.vcf  ref.fa
integration-test/data/vcf-remove-filtered-gt/: expected.vcf  input.vcf
integration-test/data/vcf-report/: expected-sample.txt  expected-site.txt  input.vcf
integration-test/data/vcf-site-filter/: expected-f0.3.vcf  expected-f0.6.vcf  expected-f0.9.vcf  input.vcf
integration-test/data/wig2bed/: expected-Z.bed  expected-Zc.bed  expected-c.bed  expected.bed  input.wig
integration-test/intersect/: CMakeLists.txt  error.t  intersect.t  iub.t  miss.t
integration-test/intersect/data/: b.bed  expected-exact-allele-both.bed  expected-exact-allele.bed  expected-exact-pos-both.bed  expected-exact-pos.bed  expected-iub-both.bed  expected-noargs-both.bed  expected-noargs.bed  iub-a.bed  iub-b.bed
integration-test/sort/: CMakeLists.txt  error.t  sort.pl  sort.t
integration-test/sort/data/: expected.bed  input2.bed
src/: Bed.hpp  BedStream.cpp  BedStream.hpp  CMakeLists.txt  ConcordanceQuality.hpp  IResultCollector.hpp  NoReferenceFilter.hpp  SnpFilterBase.hpp  SnpIntersector.cpp  SnpIntersector.hpp  SnpStream.cpp  SnpStream.hpp  SnvFilterBase.hpp  SnvIntersector.cpp  SnvIntersector.hpp  SnvStream.cpp  SnvStream.hpp  SortBed.cpp  SortBed.hpp  SortTempFile.hpp  TypeFilter.hpp  intconfig.hpp  main.cpp
src/exe/annotate/: AnnotateApp.cpp  AnnotateApp.hpp  CMakeLists.txt  main.cpp
src/exe/bedsort/: BedSortApp.cpp  BedSortApp.hpp  CMakeLists.txt  Sort.cpp  main.cpp
src/exe/cmpbed/: CMakeLists.txt  CmpBedApp.cpp  CmpBedApp.hpp  main.cpp
src/exe/contrib/: CMakeLists.txt  MakeContigs.cpp  RemoveOverlapping.cpp  TestNormalizeIndels.cpp  VcfIoBenchmark.cpp  example_vcf.cpp  vcf_report.cpp
src/exe/joinx/: BedMergeCommand.cpp  BedMergeCommand.hpp  CMakeLists.txt  CheckRefCommand.cpp  CheckRefCommand.hpp  Collector.hpp  CommandBase.cpp  CommandBase.hpp  CreateContigsCommand.cpp  CreateContigsCommand.hpp  GenerateCommand.cpp  GenerateCommand.hpp  IntersectApp.cpp  IntersectApp.hpp  IntersectCollector.hpp  IntersectCommand.cpp  IntersectCommand.hpp  JoinX.cpp  JoinX.hpp  JoinXApp.cpp  JoinXApp.hpp  RefStatsCommand.cpp  RefStatsCommand.hpp  RemapCigarCommand.cpp  RemapCigarCommand.hpp  SnvConcordanceByQualityCommand.cpp  SnvConcordanceByQualityCommand.hpp  SnvConcordanceCommand.cpp  SnvConcordanceCommand.hpp  SortCommand.cpp  SortCommand.hpp  StreamHandler.cpp  StreamHandler.hpp  Vcf2RawCommand.cpp  Vcf2RawCommand.hpp  VcfAnnotateCommand.cpp  VcfAnnotateCommand.hpp  VcfFilterCommand.cpp  VcfFilterCommand.hpp  VcfMergeCommand.cpp  (+10 more)
src/exe/snvcmp/: CMakeLists.txt  ConcordanceApp.cpp  ConcordanceApp.hpp  ConcordanceReport.cpp  ConcordanceReport.hpp  Sort.hpp  Subprogram.hpp  main.cpp
src/lib/annotate/: CMakeLists.txt  CdsExonAnnotator.cpp  CdsExonAnnotator.hpp  FlankAnnotator.cpp  FlankAnnotator.hpp  HomopolymerAnnotator.cpp  HomopolymerAnnotator.hpp  IntersectAnnotation.cpp  IntersectAnnotation.hpp  IntronAnnotator.cpp  IntronAnnotator.hpp  Iub.hpp  ReferenceSequence.hpp  Region.cpp  Region.hpp  RnaAnnotator.cpp  RnaAnnotator.hpp  Sequence.cpp  Sequence.hpp  SimpleVcfAnnotator.hpp  TranscriptAnnotator.cpp  TranscriptAnnotator.hpp  TranscriptStructure.cpp  (+5 more)
src/scripts/: CMakeLists.txt  VcfReport.R
(+462 files in other folders)
