cmake_minimum_required(VERSION 2.8)

project(fileformats)

set(SOURCES
    Bed.cpp
    Bed.hpp
    BedReader.cpp
    BedReader.hpp
    ChromPos.cpp
    ChromPos.hpp
    ChromPosReader.cpp
    ChromPosReader.hpp
    Fasta.cpp
    Fasta.hpp
    InferFileType.cpp
    InferFileType.hpp
    InputStream.cpp
    InputStream.hpp
    OutputWriter.hpp
    StreamFactory.hpp
    StreamHandler.cpp
    StreamHandler.hpp
    TypedStream.hpp
    Variant.cpp
    Variant.hpp
    VcfReader.cpp
    VcfReader.hpp
    WiggleReader.cpp
    WiggleReader.hpp
    vcf/AlleleMerger.cpp
    vcf/AlleleMerger.hpp
    vcf/AltNormalizer.cpp
    vcf/AltNormalizer.hpp
    vcf/Builder.cpp
    vcf/Builder.hpp
    vcf/Compare.cpp
    vcf/Compare.hpp
    vcf/ConsensusFilter.cpp
    vcf/ConsensusFilter.hpp
    vcf/CustomType.cpp
    vcf/CustomType.hpp
    vcf/CustomValue.cpp
    vcf/CustomValue.hpp
    vcf/Entry.cpp
    vcf/Entry.hpp
    vcf/EntryMerger.cpp
    vcf/EntryMerger.hpp
    vcf/GenotypeCall.cpp
    vcf/GenotypeCall.hpp
    vcf/GenotypeMerger.cpp
    vcf/GenotypeMerger.hpp
    vcf/Header.cpp
    vcf/Header.hpp
    vcf/Map.cpp
    vcf/Map.hpp
    vcf/MergeStrategy.cpp
    vcf/MergeStrategy.hpp
    vcf/RawVariant.hpp
    vcf/SampleData.cpp
    vcf/SampleData.hpp
    vcf/ValueMergers.cpp
    vcf/ValueMergers.hpp
    vcf/VariantAdaptor.cpp
    vcf/VariantAdaptor.hpp
)

add_library(fileformats ${SOURCES})
target_link_libraries(fileformats common ${Boost_LIBRARIES} ${BZIP2_LIBRARIES} ${ZLIB_LIBRARIES})
