cmake_minimum_required(VERSION 2.8)

project(fileformats)

set(SOURCES
    Bed.cpp
    Bed.hpp
    BedReader.cpp
    BedReader.hpp
    ChromPos.cpp
    ChromPos.hpp
    ChromPosReader.cpp
    ChromPosReader.hpp
    DefaultPrinter.hpp
    Fasta.cpp
    Fasta.hpp
    FastaIndex.cpp
    FastaIndex.hpp
    FastaIndexGenerator.cpp
    FastaIndexGenerator.hpp
    InferFileType.cpp
    InferFileType.hpp
    StreamFactory.hpp
    StreamPump.hpp
    TypedStream.hpp
    Variant.cpp
    Variant.hpp
    VcfReader.cpp
    VcfReader.hpp
    WiggleReader.cpp
    WiggleReader.hpp
    vcf/AlleleMerger.cpp
    vcf/AlleleMerger.hpp
    vcf/AltNormalizer.cpp
    vcf/AltNormalizer.hpp
    vcf/Builder.cpp
    vcf/Builder.hpp
    vcf/Compare.cpp
    vcf/Compare.hpp
    vcf/ConsensusFilter.cpp
    vcf/ConsensusFilter.hpp
    vcf/CustomType.cpp
    vcf/CustomType.hpp
    vcf/CustomValue.cpp
    vcf/CustomValue.hpp
    vcf/Entry.cpp
    vcf/Entry.hpp
    vcf/EntryMerger.cpp
    vcf/EntryMerger.hpp
    vcf/GenotypeCall.cpp
    vcf/GenotypeCall.hpp
    vcf/GenotypeComparator.hpp
    vcf/GenotypeDictionary.hpp
    vcf/GenotypeMerger.cpp
    vcf/GenotypeMerger.hpp
    vcf/Header.cpp
    vcf/Header.hpp
    vcf/Map.cpp
    vcf/Map.hpp
    vcf/MergeStrategy.cpp
    vcf/MergeStrategy.hpp
    vcf/MultiWriter.cpp
    vcf/MultiWriter.hpp
    vcf/RawVariant.cpp
    vcf/RawVariant.hpp
    vcf/SampleData.cpp
    vcf/SampleData.hpp
    vcf/SampleTag.cpp
    vcf/SampleTag.hpp
    vcf/ValueMergers.cpp
    vcf/ValueMergers.hpp
    vcf/VariantAdaptor.cpp
    vcf/VariantAdaptor.hpp
)

add_library(fileformats ${SOURCES})
target_link_libraries(fileformats ${Boost_LIBRARIES} ${ZLIB_LIBRARIES})
